--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+h1{
+  text-align:right;
+  padding:0px 50px 10px 50px;
+  margin: 0px 0px 10px 0px;
+}
+
+
 .App {
   text-align: center;
 }
@@ -14,7 +21,7 @@
 }
 
 .App-header {
-  background-color: orange;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
