--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,65 @@ h1{
   margin: 0px 0px 10px 0px;
 }
 
+.box{
+  position:fixed;
+  top:0px;
+  left:0px;
+  width:10vw;
+  height:10vh;
+  border-radius:100px;
+  background-color: green;
+  animation-name:move;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+}
+
+@keyframes move{
+  from{
+    top:0vh;
+  }
+  to{
+    top:100vh;
+  }
+}
+
+
+.test{
+  position:fixed;
+  top:0px;
+  left:0px;
+  width:10vw;
+  height:10vh;
+  border-radius:100px;
+  background-color: green;
+  animation-name:move2;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+}
+
+@keyframes move2{
+  0%{
+    top:0vh;
+  }
+  20%{
+    top:50vh;
+  }
+  40%{
+    top:30vh;
+    left:20px;
+  }
+  60%{
+    top:70vh;
+    left:50px;
+  }
+  80%{
+    top:85vh;
+  }
+  100%{
+    top:100vh;
+    height:100vh;
+  }
+}
 
 .App {
   text-align: center;
